# bobo-boogaloo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.bat  clean.sh  debuginfo.txt  main.cpp  run.sh  setup.bat
sdk/: VulkanSDK.dmg
src/: HelloTriangle.h  bpch.h  main.cpp
src/engine/: Bobo.h  Window.h
src/engine/Model/: Model.h  ModelLoader.h
src/engine/Physics/: Physics.h  Rigidbody.h
src/game/: Game.h
src/physics/: Physics.h  Rigidbody.h
